--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.2",
     "remark-gfm": "^4.0.1",
+    "rss-parser": "^3.13.0",
     "sonner": "^2.0.7",
     "streamdown": "^1.4.0",
     "superjson": "^1.13.3",
