--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "next-themes": "^0.4.6",
     "pg": "^8.12.0",
     "postgres": "^3.4.4",
+    "puppeteer": "^24.36.0",
     "react": "^19.2.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.1",
@@ -106,7 +107,7 @@
     "postcss": "^8.4.47",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.14",
-    "tsx": "^4.19.1",
+    "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "5.9.3",
     "vite": "^7.1.7",
@@ -120,6 +121,9 @@
     },
     "overrides": {
       "tailwindcss>nanoid": "3.3.7"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "puppeteer"
+    ]
   }
 }
